--- a/4-website/src/output.css
+++ b/4-website/src/output.css
@@ -556,42 +556,29 @@ video {
   display: none;
 }
 
-.container{
-  width: 100%;
+.range-card{
+  height: 480px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-@media (min-width: 640px){
-  .container{
-    max-width: 640px;
-  }
+.range-card-text{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  text-align: center;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 700;
 }
 
-@media (min-width: 768px){
-  .container{
-    max-width: 768px;
-  }
+.section-container{
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80rem;
 }
 
-@media (min-width: 1024px){
-  .container{
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px){
-  .container{
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px){
-  .container{
-    max-width: 1536px;
-  }
-}
-
-.absolute{
-  position: absolute;
+.fixed{
+  position: fixed;
 }
 
 .relative{
@@ -602,41 +589,29 @@ video {
   right: 0px;
 }
 
-.top-\[250px\]{
-  top: 250px;
-}
-
-.top-\[20px\]{
-  top: 20px;
-}
-
-.top-\[\]{
-  top: ;
-}
-
-.top-\[40\%\]{
-  top: 40%;
-}
-
-.top-\[20\%\]{
-  top: 20%;
-}
-
 .top-\[25\%\]{
   top: 25%;
 }
 
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
+.top-0{
+  top: 0px;
+}
+
+.z-\[1000\]{
+  z-index: 1000;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mb-4{
   margin-bottom: 1rem;
-}
-
-.ml-1{
-  margin-left: 0.25rem;
 }
 
 .ml-3{
@@ -647,48 +622,28 @@ video {
   margin-right: 1.25rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
+.mt-\[100px\]{
+  margin-top: 100px;
 }
 
-.mr-auto{
-  margin-right: auto;
+.mt-10{
+  margin-top: 2.5rem;
 }
 
-.ml-auto{
-  margin-left: auto;
+.mt-5{
+  margin-top: 1.25rem;
 }
 
 .flex{
   display: flex;
 }
 
-.inline-flex{
-  display: inline-flex;
+.grid{
+  display: grid;
 }
 
 .h-10{
   height: 2.5rem;
-}
-
-.h-4{
-  height: 1rem;
-}
-
-.h-screen{
-  height: 100vh;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[800px\]{
-  height: 800px;
-}
-
-.h-\[500px\]{
-  height: 500px;
 }
 
 .h-\[600px\]{
@@ -699,32 +654,20 @@ video {
   height: 100%;
 }
 
-.w-10{
-  width: 2.5rem;
+.h-\[300px\]{
+  height: 300px;
 }
 
-.w-4{
-  width: 1rem;
+.w-10{
+  width: 2.5rem;
 }
 
 .w-full{
   width: 100%;
 }
 
-.max-w-7xl{
-  max-width: 80rem;
-}
-
-.max-w-4xl{
-  max-width: 56rem;
-}
-
-.max-w-3xl{
-  max-width: 48rem;
-}
-
-.max-w-sm{
-  max-width: 24rem;
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -743,26 +686,17 @@ video {
   justify-content: center;
 }
 
-.gap-x-5{
-  -moz-column-gap: 1.25rem;
-       column-gap: 1.25rem;
+.justify-between{
+  justify-content: space-between;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-x-6{
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
-}
-
-.space-y-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
-
-.space-x-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-6 > :not([hidden]) ~ :not([hidden]){
@@ -771,8 +705,10 @@ video {
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.rounded{
-  border-radius: 0.25rem;
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .rounded-full{
@@ -783,33 +719,9 @@ video {
   border-radius: 0.75rem;
 }
 
-.border-0{
-  border-width: 0px;
-}
-
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
 .bg-indigo-500{
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity, 1));
-}
-
-.bg-orange-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity, 1));
 }
 
 .bg-orange-200{
@@ -822,12 +734,51 @@ video {
   background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity, 1));
+}
+
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
+}
+
+.bg-slate-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity, 1));
+}
+
 .bg-cover{
   background-size: cover;
 }
 
-.bg-contain{
-  background-size: contain;
+.bg-center{
+  background-position: center;
+}
+
+.bg-no-repeat{
+  background-repeat: no-repeat;
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-center{
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-2{
@@ -836,30 +787,6 @@ video {
 
 .p-5{
   padding: 1.25rem;
-}
-
-.p-6{
-  padding: 1.5rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 
 .px-5{
@@ -872,8 +799,22 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.text-center{
+  text-align: center;
+}
+
 .font-poppins{
   font-family: Poppins, sans-serif;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-base{
@@ -886,17 +827,17 @@ video {
   line-height: 1.75rem;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.font-medium{
-  font-weight: 500;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-bold{
   font-weight: 700;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .text-gray-600{
@@ -909,16 +850,6 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-orange-400{
-  --tw-text-opacity: 1;
-  color: rgb(251 146 60 / var(--tw-text-opacity, 1));
-}
-
 .text-orange-700{
   --tw-text-opacity: 1;
   color: rgb(194 65 12 / var(--tw-text-opacity, 1));
@@ -929,9 +860,14 @@ video {
   color: rgb(226 232 240 / var(--tw-text-opacity, 1));
 }
 
-.hover\:bg-gray-200:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-slate-400{
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-gray-900:hover{
@@ -939,12 +875,15 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
-.focus\:outline-none:focus{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 @media (min-width: 768px){
+  .md\:fixed{
+    position: fixed;
+  }
+
+  .md\:absolute{
+    position: absolute;
+  }
+
   .md\:mb-0{
     margin-bottom: 0px;
   }
@@ -961,7 +900,28 @@ video {
     margin-top: 0px;
   }
 
+  .md\:flex{
+    display: flex;
+  }
+
+  .md\:grid{
+    display: grid;
+  }
+
+  .md\:max-w-sm{
+    max-width: 24rem;
+  }
+
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:p-0{
+    padding: 0px;
+  }
+
+  .md\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
