--- a/4-website/src/output.css
+++ b/4-website/src/output.css
@@ -577,6 +577,15 @@ video {
   max-width: 80rem;
 }
 
+.p-text-container{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .fixed{
   position: fixed;
 }
@@ -589,12 +598,12 @@ video {
   right: 0px;
 }
 
-.top-\[25\%\]{
-  top: 25%;
-}
-
 .top-0{
   top: 0px;
+}
+
+.top-\[25\%\]{
+  top: 25%;
 }
 
 .z-\[1000\]{
@@ -622,24 +631,16 @@ video {
   margin-right: 1.25rem;
 }
 
-.mt-\[100px\]{
-  margin-top: 100px;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
 .mt-5{
   margin-top: 1.25rem;
 }
 
-.flex{
-  display: flex;
+.mt-\[100px\]{
+  margin-top: 100px;
 }
 
-.grid{
-  display: grid;
+.flex{
+  display: flex;
 }
 
 .h-10{
@@ -652,10 +653,6 @@ video {
 
 .h-full{
   height: 100%;
-}
-
-.h-\[300px\]{
-  height: 300px;
 }
 
 .w-10{
@@ -734,29 +731,9 @@ video {
   background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity, 1));
 }
 
 .bg-cover{
@@ -769,16 +746,6 @@ video {
 
 .bg-no-repeat{
   background-repeat: no-repeat;
-}
-
-.object-cover{
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.object-center{
-  -o-object-position: center;
-     object-position: center;
 }
 
 .p-2{
@@ -812,6 +779,11 @@ video {
   font-family: Poppins, sans-serif;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -825,11 +797,6 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-bold{
@@ -860,14 +827,14 @@ video {
   color: rgb(226 232 240 / var(--tw-text-opacity, 1));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
 .text-slate-400{
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity, 1));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-gray-900:hover{
@@ -876,10 +843,6 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:fixed{
-    position: fixed;
-  }
-
   .md\:absolute{
     position: absolute;
   }
@@ -918,10 +881,5 @@ video {
 
   .md\:p-0{
     padding: 0px;
-  }
-
-  .md\:px-0{
-    padding-left: 0px;
-    padding-right: 0px;
   }
 }
